--- a/index.html
+++ b/index.html
@@ -39,6 +39,26 @@
 			</div>
 		</div>
 	</div>
+	<div class="row">
+		<div class="small-11 small-centered large-centered columns">
+			<div class="project">
+				<div class="project_image"><img src="images/iftf.png"></div>
+				<div class="project_contents"><h3>IFTF Foresight Maps</h3>
+					The <a href="http://www.iftf.org/home/">Institute for the Future</a> produces “foresight maps” based on their research. This tool translates IFTF's print maps into an interactive experience. Users can explore, filter, and add to the data to better understand our complex futures. Using D3.js to power the visualitions allows authors to quickly experiment with a variety of visualization models for each project.
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="row">
+		<div class="small-11 small-centered large-centered columns">
+			<div class="project">
+				<div class="project_image"><img src="images/explo.png"></div>
+				<div class="project_contents"><h3>Exploratorium Plankton kiosk</h3>
+					The Plankton Book kiosk introduces <a href="https://www.exploratorium.edu/">Exploratorium</a> visitors to the plankton species living right outside the museum’s door, in the San Francisco Bay. The kiosk provides a taxonomy of all species, and shows their fluctuations  over the course of the year.
+				</div>
+			</div>
+		</div>
+	</div>
 		<div class="row">
 		<div class="small-11 small-centered large-centered columns">
 			<div class="project">
@@ -59,11 +79,11 @@
 			</div>
 		</div>
 	</div>
-		<div class="row">
+	<div class="row">
 		<div class="small-11 small-centered large-centered columns">
 			<div class="project">
-				<div class="project_image"><img src="images/iftf.png"></div>
-				<div class="project_contents"><h3>IFTF Foresight Maps</h3>
+				<div class="project_image"><img src="images/ats.jpg"></div>
+				<div class="project_contents"><h3>Across the Sciences</h3>
 					The <a href="http://www.iftf.org/home/">Institute for the Future</a> produces “foresight maps” based on their research. This tool translates IFTF's print maps into an interactive experience. Users can explore, filter, and add to the data to better understand our complex futures. Using D3.js to power the visualitions allows authors to quickly experiment with a variety of visualization models for each project.
 				</div>
 			</div>
@@ -72,8 +92,8 @@
 	<div class="row">
 		<div class="small-11 small-centered large-centered columns">
 			<div class="project">
-				<div class="project_image"><img src="images/explo.png"></div>
-				<div class="project_contents"><h3>Exploratorium Plankton kiosk</h3>
+				<div class="project_image"><img src="images/math-illuminated.jpg"></div>
+				<div class="project_contents"><h3>Mathematics Illuminated</h3>
 					The Plankton Book kiosk introduces <a href="https://www.exploratorium.edu/">Exploratorium</a> visitors to the plankton species living right outside the museum’s door, in the San Francisco Bay. The kiosk provides a taxonomy of all species, and shows their fluctuations  over the course of the year.
 				</div>
 			</div>
