added new projects

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 			<div class="project">
 				<div class="project_image"><img src="images/struktur.jpg"></div>
 				<div class="project_contents"><h3>Struktur Event</h3>
-					Struktur Event is the first creative <a href="http://strukturevent.com" target="_blank">conference</a> and <a href="http://strukturevent.com/podcast-2" target="_blank">podcast</a> for the outdoor industry. Now in its fourth year, Struktur brings together designers from the top apparel and equipment brands to support the industry. Working at the intersection of creativity, business and entrepreneurship, it’s a new space for designers to build valuable skills, get exposed to new materials and processes, and forge stronger relationships with partners.
+					Struktur Event is the first creative <a href="http://strukturevent.com" target="_blank">conference</a> and <a href="http://strukturevent.com/podcast-2" target="_blank">podcast</a> for the outdoor industry. Now in its fourth year, Struktur brings together designers from the top apparel and equipment brands to grow design leadership capacity, and build professinalism within the industry. Working at the intersection of creativity, business and entrepreneurship, it’s a new space for designers to build valuable skills, get exposed to new materials and processes, and forge stronger relationships with partners.
 				</div>
 			</div>
 		</div>
@@ -84,7 +84,7 @@
 			<div class="project">
 				<div class="project_image"><img src="images/ats.jpg"></div>
 				<div class="project_contents"><h3>Across the Sciences</h3>
-					The <a href="http://www.iftf.org/home/">Institute for the Future</a> produces “foresight maps” based on their research. This tool translates IFTF's print maps into an interactive experience. Users can explore, filter, and add to the data to better understand our complex futures. Using D3.js to power the visualitions allows authors to quickly experiment with a variety of visualization models for each project.
+					<a href="https://bscs.org/ats">Across the Sciences</a> is a professional development course for High School science teachers, developed in partnership with <a href="https://bscs.org">BSCS</a>, and <a href="http://btc.montana.edu/courses/aspx/ntenhome.aspx">NTEN</a>. This project was funded by the <a href="http://www.nsf.gov/">National Science Foundation</a> to provide inquiry-based resources for pre-service and in-service educators. The distance-learning program includes interactives, hands-on activities, and classroom videos modeling constructivist teaching.
 				</div>
 			</div>
 		</div>
@@ -94,7 +94,7 @@
 			<div class="project">
 				<div class="project_image"><img src="images/math-illuminated.jpg"></div>
 				<div class="project_contents"><h3>Mathematics Illuminated</h3>
-					The Plankton Book kiosk introduces <a href="https://www.exploratorium.edu/">Exploratorium</a> visitors to the plankton species living right outside the museum’s door, in the San Francisco Bay. The kiosk provides a taxonomy of all species, and shows their fluctuations  over the course of the year.
+					<a href="http://www.learner.org/courses/mathilluminated/">Mathematics Illuminated</a> is a thirteen-part series that traverses major themes in the field of mathematics, from humankind's earliest study of prime numbers, to the cutting-edge mathematics used to reveal the shape of the universe. This series includes broadcast video, interactive activities, and a classroom textbook.
 				</div>
 			</div>
 		</div>
