added scrollreveal code

--- a/index.html
+++ b/index.html
@@ -114,7 +114,13 @@
 
   ga('create', 'UA-42679505-2', 'auto');
   ga('send', 'pageview');
-
+</script>
+<script src="js/scrollreveal.min.js"></script>
+<script type="text/javascript">
+      (function(){
+        window.sr = ScrollReveal();
+        sr.reveal('.project_image');
+      })();
 </script>
   </body>
 </html>
