--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 			<div class="project">
 				<div class="project_image"><img src="images/iftf.png"></div>
 				<div class="project_contents"><h3>IFTF Foresight Maps</h3>
-					The <a href="http://www.iftf.org/home/">Institute for the Future</a> produces “foresight maps” based on their research. This tool translates IFTF's print maps into an interactive experience. Users can explore, filter, and add to the data to better understand our complex futures. Using D3.js to power the visualitions allows authors to quickly experiment with a variety of visualization models for each project.
+					The <a href="http://www.iftf.org/home/">Institute for the Future</a> produces “foresight maps” based on their research. This tool translates IFTF's print maps into an interactive experience. Users can explore, filter, and add to the data to better understand our complex futures. Using D3.js to power the visualizations allows authors to quickly experiment with a variety of visualization models for each project.
 				</div>
 			</div>
 		</div>
