added new projects

--- a/index.html
+++ b/index.html
@@ -39,6 +39,26 @@
 			</div>
 		</div>
 	</div>
+		<div class="row">
+		<div class="small-11 small-centered large-centered columns">
+			<div class="project">
+				<div class="project_image"><img src="images/chatbot.png"></div>
+				<div class="project_contents"><h3>Reveal chatbot prototype</h3>
+					One of CIR's goals was to convert their audience of podcast listeners into readers of their longform journalism. As people listen to the show, they can text the chatbot at key moments to dig deeper in the story, and receive additional content as a photograph of characters, a chart, or key documents providing more context to the story. The experience concludes with a link to the longform text piece. This prototype grew out of CIR's collaboation with the d.school at Stanford University.  
+				</div>
+			</div>
+		</div>
+	</div>
+		<div class="row">
+		<div class="small-11 small-centered large-centered columns">
+			<div class="project">
+				<div class="project_image"><img src="images/impact.png"></div>
+				<div class="project_contents"><h3>Impact Tracker</h3>
+					Nonprofit organizations are always looking to measure and analyze the impact of their work. I collaborated with our Director of Strategic Research to develop the Impact Tracker. This online database allows for consistent recording and analysys of media imapct at the structural, societal, and individual level. A histogram timeline lets organizations visualize their impact over time.
+				</div>
+			</div>
+		</div>
+	</div>
 	<div class="row">
 		<div class="small-11 small-centered large-centered columns">
 			<div class="project">
