--- a/index.html
+++ b/index.html
@@ -6,121 +6,94 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sam Ward</title>
     <link rel="stylesheet" href="css/foundation.css">
-    <link rel="stylesheet" href="css/app.css">
+    <link rel="stylesheet" href="css/app.css">    
   </head>
   <body>
     <div class="row">
      	<div class="small-9 small-centered large-centered columns"><h2>Sam Ward</h2></div>
     </div>
 	<div class="row intro">
-  		<div class="small-9 small-centered large-centered columns"><h1>Hello,<br>
-			I work at the intersection of design, media, and user experience.</h1>
+  		<div class="small-9 small-centered large-centered columns"><h1>Hello. I bring great ideas to life.</h1>
 		</div>
-	</div>
-	<div class="row">
-  		<div class="small-9 small-centered large-centered columns"><div class="timeline-label">WORK</div></div>
 	</div>
 	<div class="row">
 		<div class="small-11 small-centered large-centered columns">
 			<div class="project">
-				<div class="project_image left"><img src="images/reveal.jpg"></div>
-				<div class="project_contents"><h3>Reveal website</h3>
-					<a href="https://www.revealnews.org/" target="_blank">Reveal</a> is the online home of The Center for Investigative Reporting’s award-winning journalism. The design provides a clean, minimal layout optimized for readability across all platforms, and is perfectly suited for Reveal’s long-form work. A persistent audio player facilitates extended listening by not reloading between pages. The Reveal website won the 2016 Edgar R. Murrow award for general excellence.
+				<div class="project_contents" id="amplify"><h3>Amplify chatbot</h3></div>
+				<div class="project_image"><a href="amplify.html"><img src="images/chatbot.png"></a></div>
+			</div>
+		</div>
+	<div class="row">
+		<div class="small-11 small-centered large-centered columns">
+			<div class="project">
+				<div class="project_contents" id="exploratorium"><h3>Exploratorium Plankton kiosk</h3></div>
+				<div class="project_image"><a href="exploratorium.html"><img src="images/explo.png"></a></div>
 			</div>
 		</div>
 	</div>
 	<div class="row">
 		<div class="small-11 small-centered large-centered columns">
 			<div class="project">
-				<div class="project_image"><img src="images/struktur.jpg"></div>
-				<div class="project_contents"><h3>Struktur Event</h3>
-					Struktur Event is the first creative <a href="http://strukturevent.com" target="_blank">conference</a> and <a href="http://strukturevent.com/podcast-2" target="_blank">podcast</a> for the outdoor industry. Now in its fourth year, Struktur brings together designers from the top apparel and equipment brands to grow design leadership capacity, and build professinalism within the industry. Working at the intersection of creativity, business and entrepreneurship, it’s a new space for designers to build valuable skills, get exposed to new materials and processes, and forge stronger relationships with partners.
-				</div>
+				<div class="project_contents" id="iftf"><h3>Institute for the Future foresight maps</h3></div>
+				<div class="project_image"><a href="iftf.html"><img src="images/iftf_live.png"></a></div>
 			</div>
 		</div>
+	</div>
+	<div class="row">
+		<div class="small-11 small-centered large-centered columns">
+			<div class="project">
+				<div class="project_contents" id="reveal"><h3>Reveal website</h3></div>
+				<div class="project_image left"><a href="reveal.html"><img src="images/reveal.jpg"></a></div>
+				
+		</div>
+	</div>
+	<div class="row">
+		<div class="small-11 small-centered large-centered columns">
+			<div class="project">
+				<div class="project_contents" id="reveal"><h3>Natural History Museum of Utah Trailhead to Utah</h3></div>
+				<div class="project_image left"><a href="nhmu.html"><img src="images/trilobite.jpg"></a></div>
+				
+		</div>
+	</div>
+	<div class="row">
+		<div class="small-11 small-centered large-centered columns">
+			<div class="project">
+				<div class="project_contents" id="struktur"><h3>Struktur Event design conference</h3></div>
+				<div class="project_image"><a href="struktur.html"><img src="images/struktur.jpg"></a></div>
+
+			</div>
+		</div>
+	</div>
 	</div>
 		<div class="row">
 		<div class="small-11 small-centered large-centered columns">
 			<div class="project">
-				<div class="project_image"><img src="images/chatbot.png"></div>
-				<div class="project_contents"><h3>Reveal chatbot prototype</h3>
-					One of CIR's goals was to convert their audience of podcast listeners into readers of their longform journalism. As people listen to the show, they can text the chatbot at key moments to dig deeper in the story, and receive additional content as a photograph of characters, a chart, or key documents providing more context to the story. The experience concludes with a link to the longform text piece. This prototype grew out of CIR's collaboation with the d.school at Stanford University.  
-				</div>
+				<div class="project_contents" id="impact"><h3>Impact Tracker dashboard</h3></div>
+				<div class="project_image"><a href="impact.html"><img src="images/tracker.png"></a></div>
+
 			</div>
 		</div>
 	</div>
+
 		<div class="row">
 		<div class="small-11 small-centered large-centered columns">
 			<div class="project">
-				<div class="project_image"><img src="images/impact.png"></div>
-				<div class="project_contents"><h3>Impact Tracker</h3>
-					Nonprofit organizations are always looking to measure and analyze the impact of their work. I collaborated with our Director of Strategic Research to develop the Impact Tracker. This online database allows for consistent recording and analysys of media imapct at the structural, societal, and individual level. A histogram timeline lets organizations visualize their impact over time.
-				</div>
+				<div class="project_contents" id="moca"><h3>MOCA website</h3></div>
+				<div class="project_image"><a href="moca.html"><img src="images/moca.jpg"></a></div>
 			</div>
 		</div>
 	</div>
 	<div class="row">
 		<div class="small-11 small-centered large-centered columns">
 			<div class="project">
-				<div class="project_image"><img src="images/iftf.png"></div>
-				<div class="project_contents"><h3>IFTF Foresight Maps</h3>
-					The <a href="http://www.iftf.org/home/">Institute for the Future</a> produces “foresight maps” based on their research. This tool translates IFTF's print maps into an interactive experience. Users can explore, filter, and add to the data to better understand our complex futures. Using D3.js to power the visualizations allows authors to quickly experiment with a variety of visualization models for each project.
-				</div>
+				<div class="project_contents" id="noguchi"><h3>The Noguchi Museum website</h3></div>
+				<div class="project_image"><a href="noguchi.html"><img src="images/noguchi.jpg"></a></div>
 			</div>
 		</div>
 	</div>
 	<div class="row">
-		<div class="small-11 small-centered large-centered columns">
-			<div class="project">
-				<div class="project_image"><img src="images/explo.png"></div>
-				<div class="project_contents"><h3>Exploratorium Plankton kiosk</h3>
-					The Plankton Book kiosk introduces <a href="https://www.exploratorium.edu/">Exploratorium</a> visitors to the plankton species living right outside the museum’s door, in the San Francisco Bay. The kiosk provides a taxonomy of all species, and shows their fluctuations  over the course of the year.
-				</div>
-			</div>
+		<div class="small-11 small-centered large-centered columns footer">
 		</div>
-	</div>
-		<div class="row">
-		<div class="small-11 small-centered large-centered columns">
-			<div class="project">
-				<div class="project_image"><img src="images/moca.jpg"></div>
-				<div class="project_contents"><h3>MOCA website</h3>					
-					The <a href="http://mocacleveland.org/">MOCA</a> website is a vibrant tribute to Cleveland’s newest contemporary art museum. The layered, saturated design effortlessly complements the museum’s contemporary vibe.
-				</div>
-			</div>
-		</div>
-	</div>
-	<div class="row">
-		<div class="small-11 small-centered large-centered columns">
-			<div class="project">
-				<div class="project_image"><img src="images/noguchi.jpg"></div>
-				<div class="project_contents"><h3>The Noguchi Museum website</h3>					
-					Inspired by the artist himself, the <a href="http://noguchi.org/">Noguchi Museum</a> website is a calm solace in the wilds of the internet. The bilingual project showcases the museum’s collection, ongoing events, and biographical information about the artist.
-				</div>
-			</div>
-		</div>
-	</div>
-	<div class="row">
-		<div class="small-11 small-centered large-centered columns">
-			<div class="project">
-				<div class="project_image"><img src="images/ats.jpg"></div>
-				<div class="project_contents"><h3>Across the Sciences</h3>
-					<a href="https://bscs.org/ats">Across the Sciences</a> is a professional development course for High School science teachers, developed in partnership with <a href="https://bscs.org">BSCS</a>, and <a href="http://btc.montana.edu/courses/aspx/ntenhome.aspx">NTEN</a>. This project was funded by the <a href="http://www.nsf.gov/">National Science Foundation</a> to provide inquiry-based resources for pre-service and in-service educators. The distance-learning program includes interactives, hands-on activities, and classroom videos modeling constructivist teaching.
-				</div>
-			</div>
-		</div>
-	</div>
-	<div class="row">
-		<div class="small-11 small-centered large-centered columns">
-			<div class="project">
-				<div class="project_image"><img src="images/math-illuminated.jpg"></div>
-				<div class="project_contents"><h3>Mathematics Illuminated</h3>
-					<a href="http://www.learner.org/courses/mathilluminated/">Mathematics Illuminated</a> is a thirteen-part series that traverses major themes in the field of mathematics, from humankind's earliest study of prime numbers, to the cutting-edge mathematics used to reveal the shape of the universe. This series includes broadcast video, interactive activities, and a classroom textbook.
-				</div>
-			</div>
-		</div>
-	</div>
-	<div class="row footer">
-		<div class="small-9 small-centered large-centered columns">Drop a line: sam <span class="footer-symbol">at</span> samward <span class="footer-symbol">dot</span> cc</div>
 	</div>
     <script src="js/vendor/jquery.js"></script>
     <script src="js/vendor/what-input.js"></script>
@@ -139,7 +112,7 @@
 <script type="text/javascript">
       (function(){
         window.sr = ScrollReveal();
-        sr.reveal('.project_image');
+        sr.reveal('.project');
       })();
 </script>
   </body>
