--- a/index.html
+++ b/index.html
@@ -19,6 +19,13 @@
 	<div class="row">
 		<div class="small-11 small-centered large-centered columns">
 			<div class="project">
+				<div class="project_contents" id="compass"><h3>Compass research & service design</h3></div>
+				<div class="project_image"><a href="compass.html"><img src="images/chatbot.png"></a></div>
+			</div>
+		</div>
+			<div class="row">
+		<div class="small-11 small-centered large-centered columns">
+			<div class="project">
 				<div class="project_contents" id="amplify"><h3>Amplify chatbot</h3></div>
 				<div class="project_image"><a href="amplify.html"><img src="images/chatbot.png"></a></div>
 			</div>
@@ -42,17 +49,8 @@
 	<div class="row">
 		<div class="small-11 small-centered large-centered columns">
 			<div class="project">
-				<div class="project_contents" id="reveal"><h3>Reveal website</h3></div>
-				<div class="project_image left"><a href="reveal.html"><img src="images/reveal.jpg"></a></div>
-				
-		</div>
-	</div>
-	<div class="row">
-		<div class="small-11 small-centered large-centered columns">
-			<div class="project">
 				<div class="project_contents" id="reveal"><h3>Natural History Museum of Utah Trailhead to Utah</h3></div>
 				<div class="project_image left"><a href="nhmu.html"><img src="images/trilobite.jpg"></a></div>
-				
 		</div>
 	</div>
 	<div class="row">
@@ -60,7 +58,6 @@
 			<div class="project">
 				<div class="project_contents" id="struktur"><h3>Struktur Event design conference</h3></div>
 				<div class="project_image"><a href="struktur.html"><img src="images/struktur.jpg"></a></div>
-
 			</div>
 		</div>
 	</div>
@@ -70,11 +67,9 @@
 			<div class="project">
 				<div class="project_contents" id="impact"><h3>Impact Tracker dashboard</h3></div>
 				<div class="project_image"><a href="impact.html"><img src="images/tracker.png"></a></div>
-
 			</div>
 		</div>
 	</div>
-
 		<div class="row">
 		<div class="small-11 small-centered large-centered columns">
 			<div class="project">
