--- a/compass.html
+++ b/compass.html
@@ -19,35 +19,34 @@
 	<div class="row">
 		<div class="small-11 small-centered large-centered columns">
 			<div class="project">
-				<div class="project_image"><img src="images/chatbot.png"></div>
+				<div class="project_image"><img src="images/wDQEzlyk6x3dsS6z3yZTbyK35s.png"></div>
 				<div class="project_contents">
-					lorem
+					<p>A regional nonprofit hospital wanted to increase conversion to the paid tier of their concierge PCP service. While at frog, we conducted a series of research sprints to better understand the customer needs and develop recommendations for how to better align their offering with customers’ expectations.</p>
 				</div>
 			</div>
 		</div>
 	<div class="row">
 		<div class="small-11 small-centered large-centered columns">
 			<div class="project">
-				<div class="project_image left"><img src="images/design_review.jpg"></div>
+				<div class="project_image left"><img src="images/pU1iq9NgBwozZ5eoejzuBO9W6k/png"></div>
 				<div class="project_contents">	
-					lorem
+					<p>We conducted a series of research sprints to test hypotheses and develop insights into how patients viewed their health, what motivated them to take action, and what they wanted from their care team. We then designed a program focused on specific conditions - heart health and hypertension that took advantage of patients’ underlying motivations for change.</p>
 			</div>
 		</div>
 	</div>
 	<div class="row">
 		<div class="small-11 small-centered large-centered columns">
 			<div class="project">
-				<div class="project_image"><img src="images/karaoke2.jpg"></div>
+				<div class="project_image"><img src="images/TISLhhQVkISArCBhiKfa43dQsU.png"></div>
 				<div class="project_contents">
-					lorem
-
+					<p>The client pivoted their approach and launched key features focused on specific conditions that were addressable via behavioral change. These features were validated through positive reviews from both patients and clinicians.</p>
 				</div>
 			</div>
 		</div>
 			<div class="row">
 		<div class="small-11 small-centered large-centered columns">
 			<div class="project">
-				<div class="project_image"><img src="images/redlining.jpg"></div>
+				<div class="project_image"><img src="images/1VtMFAlYp7gW7Qnj3iWMQ9QHkVw.png"></div>
 				<div class="project_contents">
 					<p>lorem</p>
 
