--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		<div class="small-11 small-centered large-centered columns">
 			<div class="project">
 				<div class="project_contents" id="compass"><h3>Compass research & service design</h3></div>
-				<div class="project_image"><a href="compass.html"><img src="images/chatbot.png"></a></div>
+				<div class="project_image"><a href="compass.html"><img src="images/wDQEzlyk6x3dsS6z3yZTbyK35s.png"></a></div>
 			</div>
 		</div>
 			<div class="row">
