--- a/compass.html
+++ b/compass.html
@@ -28,7 +28,7 @@
 	<div class="row">
 		<div class="small-11 small-centered large-centered columns">
 			<div class="project">
-				<div class="project_image left"><img src="images/pU1iq9NgBwozZ5eoejzuBO9W6k/png"></div>
+				<div class="project_image left"><img src="images/pU1iq9NgBwozZ5eoejzuBO9W6k.png"></div>
 				<div class="project_contents">	
 					<p>We conducted a series of research sprints to test hypotheses and develop insights into how patients viewed their health, what motivated them to take action, and what they wanted from their care team. We then designed a program focused on specific conditions - heart health and hypertension that took advantage of patients’ underlying motivations for change.</p>
 			</div>
@@ -43,17 +43,6 @@
 				</div>
 			</div>
 		</div>
-			<div class="row">
-		<div class="small-11 small-centered large-centered columns">
-			<div class="project">
-				<div class="project_image"><img src="images/1VtMFAlYp7gW7Qnj3iWMQ9QHkVw.png"></div>
-				<div class="project_contents">
-					<p>lorem</p>
-
-				</div>
-			</div>
-		</div>
-	</div>
 	</div>
 		<div class="row">
   		<div class="small-2 small-centered large-centered columns footer"><a class="button secondary" href="index.html">HOME</a> </div>
