--- a/compass.html
+++ b/compass.html
@@ -21,7 +21,7 @@
 			<div class="project">
 				<div class="project_image"><img src="images/wDQEzlyk6x3dsS6z3yZTbyK35s.png"></div>
 				<div class="project_contents">
-					<p>A regional nonprofit hospital wanted to increase conversion to the paid tier of their concierge PCP service. While at frog, we conducted a series of research sprints to better understand the customer needs and develop recommendations for how to better align their offering with customers’ expectations.</p>
+					<p>A regional nonprofit hospital wanted to increase conversion to the paid tier of their concierge PCP service. While at frog, I co-led a team conducting a series of research sprints to better understand customer needs and develop recommendations for the offering.</p>
 				</div>
 			</div>
 		</div>
@@ -30,7 +30,7 @@
 			<div class="project">
 				<div class="project_image left"><img src="images/pU1iq9NgBwozZ5eoejzuBO9W6k.png"></div>
 				<div class="project_contents">	
-					<p>We conducted a series of research sprints to test hypotheses and develop insights into how patients viewed their health, what motivated them to take action, and what they wanted from their care team. We then designed a program focused on specific conditions - heart health and hypertension that took advantage of patients’ underlying motivations for change.</p>
+					<p>In qualitative interview sessions, we tested our hypotheses and explored broad questions such as what being healthy meant to patients, what motivated them to take action regarding thier health, what they wanted from their care team. During later rounds, we asked them to sort potential features for the offering into Must Have, Could Have, and Not Necessary categories. We then used this data as an input to feature prioritization.</p>
 			</div>
 		</div>
 	</div>
@@ -39,7 +39,7 @@
 			<div class="project">
 				<div class="project_image"><img src="images/TISLhhQVkISArCBhiKfa43dQsU.png"></div>
 				<div class="project_contents">
-					<p>The client pivoted their approach and launched key features focused on specific conditions that were addressable via behavioral change. These features were validated through positive reviews from both patients and clinicians.</p>
+					<p>Next, we focused our efforts on revising the service design for offering. We redesigned the program to focus on specific conditions; heart health and hypertension. Patients with these conditions were motivated to make the necessary behavioral changes to improve, and these conditions were treatable through the kinds of interventions offered by the program. The client pivoted their approach to incorporate this new focus on behavioral change. This pivot was validated through positive feedback from both patients and clinicians.</p>
 				</div>
 			</div>
 		</div>
