--- a/mama.html
+++ b/mama.html
@@ -13,7 +13,7 @@
      	<div class="small-9 small-centered large-centered columns"><h2>Sam Ward</h2></div>
     </div>
 	<div class="row intro">
-  		<div class="small-9 small-centered large-centered columns"><h1>Compass research & service design</h1>
+  		<div class="small-9 small-centered large-centered columns"><h1>Mama in Mind pregnancy and postpartum service</h1>
 		</div>
 	</div>
 	<div class="row">
