--- a/index.html
+++ b/index.html
@@ -26,6 +26,13 @@
 			<div class="row">
 		<div class="small-11 small-centered large-centered columns">
 			<div class="project">
+				<div class="project_contents" id="mama"><h3>Mama in Mind</h3></div>
+				<div class="project_image"><a href="mama.html"><img src="images/wDQEzlyk6x3dsS6z3yZTbyK35s.png"></a></div>
+			</div>
+		</div>
+			<div class="row">
+		<div class="small-11 small-centered large-centered columns">
+			<div class="project">
 				<div class="project_contents" id="amplify"><h3>Amplify chatbot</h3></div>
 				<div class="project_image"><a href="amplify.html"><img src="images/chatbot.png"></a></div>
 			</div>
@@ -53,14 +60,6 @@
 				<div class="project_image left"><a href="nhmu.html"><img src="images/trilobite.jpg"></a></div>
 		</div>
 	</div>
-	<div class="row">
-		<div class="small-11 small-centered large-centered columns">
-			<div class="project">
-				<div class="project_contents" id="struktur"><h3>Struktur Event design conference</h3></div>
-				<div class="project_image"><a href="struktur.html"><img src="images/struktur.jpg"></a></div>
-			</div>
-		</div>
-	</div>
 	</div>
 		<div class="row">
 		<div class="small-11 small-centered large-centered columns">
@@ -70,19 +69,11 @@
 			</div>
 		</div>
 	</div>
-		<div class="row">
-		<div class="small-11 small-centered large-centered columns">
-			<div class="project">
-				<div class="project_contents" id="moca"><h3>MOCA website</h3></div>
-				<div class="project_image"><a href="moca.html"><img src="images/moca.jpg"></a></div>
-			</div>
-		</div>
-	</div>
 	<div class="row">
 		<div class="small-11 small-centered large-centered columns">
 			<div class="project">
-				<div class="project_contents" id="noguchi"><h3>The Noguchi Museum website</h3></div>
-				<div class="project_image"><a href="noguchi.html"><img src="images/noguchi.jpg"></a></div>
+				<div class="project_contents" id="struktur"><h3>Struktur Event design conference</h3></div>
+				<div class="project_image"><a href="struktur.html"><img src="images/struktur.jpg"></a></div>
 			</div>
 		</div>
 	</div>
