--- a/mama.html
+++ b/mama.html
@@ -21,7 +21,7 @@
 			<div class="project">
 				<div class="project_image"><img src="images/wDQEzlyk6x3dsS6z3yZTbyK35s.png"></div>
 				<div class="project_contents">
-					<p>A regional nonprofit hospital wanted to increase conversion to the paid tier of their concierge PCP service. While at frog, I co-led a team conducting a series of research sprints to better understand customer needs and develop recommendations for the offering.</p>
+					<p>When a national hospital chain wanted to increase their marketshare for their delivery unit, I led the product discovery and concepting to make it happen. </p>
 				</div>
 			</div>
 		</div>
